# lua-eos

./: .gitignore  .gitmodules  Kconfig  LICENSE  README.md  SConscript  package.json  set-esp32-kalunga.sh
arduino/native/LDC_Test_01/: LDC_Test_01.ino
docs/: ESP32-S2-Kaluga-1_V1.3-Pin-Mapping-v0.1.xlsx  nscreen32_nat_performance_01.txt
docs/docgen/source/: conf.py  index.rst
docs/docgen/source/images/: ic.afphoto
eos_app/: app.lua
esp32-kaluga/: .gitignore  CMakeLists.txt  sdkconfig  setup_build.py
esp32-kaluga/components/: lvgl
esp32-kaluga/components/eos_native/: CMakeLists.txt  native
esp32-kaluga/components/jpeg/: jpeg.c
esp32-kaluga/components/lua_int/: CMakeLists.txt  src
esp32-kaluga/main/: CMakeLists.txt  Kconfig.projbuild  crc16.c  crc16.h  crc_desktop.c  esp32_cmds.c  lvgl_task.c  main.c  main_defs.h  xmodem.c
examples/native/: demo_01.c
lua/src/: lauxlib.c  lua.c
lua_eos/: eos.lua  lvgl.lua
lua_eos/native/: FreeRTOSConfig.h  bidings.c  eos_config.h  eos_init.cpp  eos_init.h  eos_lua.c  eos_lua.h  lua_eos.c  lua_eos.h  lvgl_lua.c  lvgl_lua.h  mos.h  mos_desktop.c  mos_desktop_timer.c  mos_desktop_timer.h  mos_freertos.c  mos_test.c  mos_test.h  nat_cmd.c  nat_cmd.h  rtos_entry.c  splash.c  splash.h
lua_eos/native/splash_logo/: info.txt  sdkconfig.old
lua_eos/native/splash_logo/c_arrays/: logo_0002.c  logo_0006.c  logo_0010.c  logo_0014.c  logo_0018.c  logo_0022.c  logo_0026.c  logo_0030.c  logo_0034.c  logo_0038.c  logo_0042.c  logo_0046.c  logo_0050.c  logo_0054.c  logo_0058.c  logo_0062.c  logo_0066.c  logo_0070.c
lua_eos/native/splash_logo/main/: main.c
lua_eos/native/splash_logo/spiffs_image/: app.lua  eos.lua  lvgl.lua
lua_eos/native/win32/: pthread.h  unistd.h  usleep.c
lvgl_patch/: bind_lv_arc.c  bind_lv_arc.h  bind_lv_bar.c  bind_lv_bar.h  bind_lv_btn.c  bind_lv_btn.h  bind_lv_btnmatrix.c  bind_lv_btnmatrix.h  bind_lv_calendar.c  bind_lv_calendar.h  bind_lv_checkbox.c  bind_lv_checkbox.h  bind_lv_disp.c  bind_lv_disp.h  bind_lv_keyboard.c  bind_lv_keyboard.h  bind_lv_label.c  bind_lv_label.h  bind_lv_linemeter.c  bind_lv_linemeter.h  bind_lv_obj.c  bind_lv_obj.h  bind_lv_slider.c  bind_lv_slider.h  bind_lv_style.c  bind_lv_style.h  bind_lv_switch.c  bind_lv_switch.h  bind_lv_textarea.c  bind_lv_textarea.h  create_style_header.py  lv_conf.h  lv_mk_bindings.py  lv_obj.c  lvgl_init_modules.c  lvgl_integr.cpp  lvgl_integr.h  lvgl_lua.c  notes.txt  style_expanded.h
nscreen32/: README.md  sdkconfig  sdkconfig.old
nscreen32/components/eos_native/: CMakeLists.txt
nscreen32/components/jpeg/include/: jpeg.h
nscreen32/components/lua_int/: CMakeLists.txt
nscreen32/components/lvgl_bindings/: CMakeLists.txt  log.h
nscreen32/components/tft_library/: CMakeLists.txt  ili9341.c
nscreen32/components/touch/: CMakeLists.txt  gt911.c  gt911.h
nscreen32/main/: CMakeLists.txt  esp32_cmds.c  esp32_cmds.h  lvgl_helpers.c  lvgl_helpers.h  lvgl_task.c  main.c  xmodem.c
simulator/: clabel.cpp  clabel.h  console.cpp  log.cpp  log.h  lua-eos-sim.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simulator.pro  termdlg.cpp  termdlg.h  termdlg.ui
simulator/utest/: tst_testmos.cpp
target_files/: app.lua  eos.lua  lv_arc.lua  lv_bar.lua  lv_btn.lua  lv_btnmatrix.lua  lv_calendar.lua  lv_checkbox.lua  lv_color.lua  lv_disp.lua  lv_keyboard.lua  lv_label.lua  lv_linemeter.lua  lv_obj.lua  lv_slider.lua  lv_style.lua  lv_switch.lua  lv_textarea.lua  lvgl.lua
utils/: malloc.c
