# idf_component_register(SRCS "native/mos_freertos.c"
#                     INCLUDE_DIRS .
#                     REQUIRES console spi_flash)


# set(COMPONENT_ADD_INCLUDEDIRS .)
# set(COMPONENT_PRIV_INCLUDEDIRS 
#   "." 
#   "../../../lua_eos/native/FreeRTOS/FreeRTOS/Source/include/")
# set(COMPONENT_SRCS "native/mos_freertos.c" )
                    
# register_component()
